ingress-gitlab.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
spec:
  rules:
  - host: git.devops-genie.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: gitlab
             port:
                number: 80
  - host: ssh-git.devops-genie.com.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: gitlab
             port:
                number: 222
